Sforce8 Project Data/src/objects/Estimate__c.object
<CustomObject>
    <fields>
        <fullName>A01__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#A01_料理</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A02__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#A02_飲料</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A03__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#A03_売店</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B01__c</fullName>
        <label>#B01_原価率_料理</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B02__c</fullName>
        <label>#B02_原価率_飲料</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B03__c</fullName>
        <label>#B03_原価率_売店</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>C01__c</fullName>
        <label>#C01_電気 [kWh]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C02__c</fullName>
        <label>#C02_プロパンガス [m3]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C03__c</fullName>
        <label>#C03_灯油 [L]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D01__c</fullName>
        <label>#D01_正社員</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D02__c</fullName>
        <label>#D02_パート（直接雇用）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D03__c</fullName>
        <label>#D03_パート（配膳会）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>DATEVALUE( MID(Name, 0, 4) + &quot;-&quot; + MID(Name, 5, 2) +&quot;-01&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>日付（年月[予算名]）</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E01__c</fullName>
        <label>#E01_正社員</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E02__c</fullName>
        <label>#E02_長期パート</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E03__c</fullName>
        <label>#E03_臨時パート</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F01__c</fullName>
        <label>#F01_役員報酬</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F02__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#F02_給与手当</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>F03__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#F03_雑給</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>G01__c</fullName>
        <formula>IF(A08__c&lt;&gt;0,F46__c/A08__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>販売管理費予測 / 売上予測</inlineHelpText>
        <label>#G01_販管費率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>H01__c</fullName>
        <formula>A08__c *(1 -  B07__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上合計 - 原価</inlineHelpText>
        <label>#H01_売上総利益（粗利）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>H02__c</fullName>
        <formula>IF(A08__c&lt;&gt;0,H01__c/A08__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上総利益（粗利）予測 / 売上予測</inlineHelpText>
        <label>#H02_粗利率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>J01__c</fullName>
        <formula>K01__c + F04__c + F05__c + F01__c + F11__c + F12__c + F40__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(売上合計 - 原価合計) - (販売管理費合計 - (役員報酬 + 賞与引当金 + 退職金引当金 + 減価償却費 + ブライダル開業償却費 + 権利金等償却費))</inlineHelpText>
        <label>#J01_営業粗利益（GOP）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>J02__c</fullName>
        <formula>IF(A08__c&lt;&gt;0,J01__c/A08__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>営業粗利益（GOP）予測 / 売上予測</inlineHelpText>
        <label>#J02_GOP率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>K01__c</fullName>
        <formula>H01__c - F46__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>売上合計*(1 - 原価率) - 販売管理費合計</inlineHelpText>
        <label>#K01_営業利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>K02__c</fullName>
        <formula>IF(A08__c&lt;&gt;0,K01__c/A08__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>営業利益予測/ 売上予測</inlineHelpText>
        <label>#K02_営業利益率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L01__c</fullName>
        <label>#L01_収益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L02__c</fullName>
        <label>#L02_費用</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L03__c</fullName>
        <formula>L01__c - L02__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#L01_収益 - #L02_費用</inlineHelpText>
        <label>#L03_損益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M01__c</fullName>
        <formula>K01__c + L03__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>((売上合計 - 原価合計) - 販売管理費合計) + (営業外収益 - 営業外費用)</inlineHelpText>
        <label>#M01_経常利益</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M02__c</fullName>
        <formula>IF(A08__c&lt;&gt;0,M01__c/A08__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>経常利益予測/ /売上予測</inlineHelpText>
        <label>#M02_経常利益率</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE(VALUE(MID(Name,5,2)),1,&quot;１月&quot;,2,&quot;２月&quot;,3,&quot;３月&quot;,10,&quot;１0月&quot;,11,&quot;１1月&quot;,12,&quot;１2月&quot;,TEXT(VALUE(MID(Name,5,2)))+&quot;月&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>レポートの棒グラフで会計年度の4月から並べるため</inlineHelpText>
        <label>月</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q01__c</fullName>
        <label>#Q01_広告宣伝費</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S01__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#S01_個人部門（ブライダル）_婚礼_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S03__c</fullName>
        <formula>S01__c  * 1800000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>婚礼組数＊1,800,000</inlineHelpText>
        <label>#S03_個人部門（ブライダル）_婚礼_売上</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S06__c</fullName>
        <defaultValue>0</defaultValue>
        <label>#S06_個人部門（ブライダル）_フォトプラン_組数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(CASE(VALUE(MID( Name ,5,2)),1, YEAR(Date__c)-1,2,YEAR(Date__c)-1,3,YEAR(Date__c)-1,YEAR(Date__c)))+&quot;年度&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年度</label>
        <type>Text</type>
    </fields>
    <label>予算</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>A08__c</columns>
        <columns>B07__c</columns>
        <columns>D08__c</columns>
        <columns>D15__c</columns>
        <columns>E04__c</columns>
        <columns>F46__c</columns>
        <columns>H01__c</columns>
        <columns>J01__c</columns>
        <columns>K01__c</columns>
        <columns>M01__c</columns>
        <columns>L03__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>年月[予算名]</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>